--- a/client/src/components/Content/ListMails/index.css
+++ b/client/src/components/Content/ListMails/index.css
@@ -1,5 +1,6 @@
 .list-mails-container {
   height: 55%;
+  max-height: 395px;
   background-color: white;
   overflow-y: scroll;
   border: 2px solid #e0e0e0;
